Cleanup random bullshit code, formatting etc from ages ago.